# clinec

./: Cargo.toml  README.md
cline_docs/: .clinerules  projectBrief.md
src/: main.rs
src/cli/: mod.rs
src/repositories/: mod.rs
src/services/: mod.rs
