[package]
name = "clinec"
version = "0.1.5"
edition = "2021"
license = "MIT"
authors = ["yyc <richieyan@gmail.com>"]
description = "CLI tool for generating AI configuration files for Cline programming plugins"
readme = "README.md"
homepage = "https://github.com/richieyan/clinec"
repository = "https://github.com/richieyan/clinec"
keywords = ["cli", "aicode", "rule", "cline"]
categories = ["command-line-utilities"]
include = [
    "src/**/*",
    "templates/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
